--- a/narratiffffchiki/index.html
+++ b/narratiffffchiki/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <meta name="darkreader-lock">
 </head>
 <body>
@@ -12,39 +12,39 @@
         <ul class="menu-bar">
             <li><span>File</span>
                 <ul class="drop-menu border-simple">
-                    <a href="#" target="_blank"><li><img src="/img/gifs/download.gif" alt="">Download Album</li></a>
-                    <a href="#" target="_blank"><li><img src="/img/gifs/microphone1-c.gif" alt="">Download Stems</li></a>
+                    <a href="#" target="_blank"><li><img src="img/gifs/download.gif" alt="">Download Album</li></a>
+                    <a href="#" target="_blank"><li><img src="img/gifs/microphone1-c.gif" alt="">Download Stems</li></a>
                 </ul>
             </li>
             <li><span>Lyrics</span>
                 <ul class="drop-menu border-simple">
                     <li class="unclickable">Display Language</li>
                     <a onclick="changeLang('ru');">
-                        <li><img src="/img/gifs/flag_ru.gif" alt="">Русский</li>
+                        <li><img src="img/gifs/flag_ru.gif" alt="">Русский</li>
                     </a>
                     <a onclick="changeLang('en');">
-                        <li><img src="/img/gifs/flag_en.gif" alt="">English</li>
+                        <li><img src="img/gifs/flag_en.gif" alt="">English</li>
                     </a>
                 </ul>
             </li>
             <li><span>Socials</span>
                 <ul class="drop-menu border-simple">
-                    <a href="https://t.me/nusylveon" target="_blank"><li><img src="/img/gifs/logo_telegram.gif" alt="">Telegram</li></a>
-                    <a href="https://instagram.com/newsylveon" target="_blank"><li><img src="/img/gifs/logo_insta.gif" alt="">Instagram</li></a>
-                    <a href="https://vk.com/newsylveon" target="_blank"><li><img src="/img/gifs/logo_vk.gif" alt="">VKontakte</li></a>
-                    <a href="https://soundcloud.com/newsylveon" target="_blank"><li><img src="/img/gifs/logo_sc.gif" alt="">Soundcloud</li></a>
-                    <a href="https://newsylveon.bandcamp.com" target="_blank"><li><img src="/img/gifs/logo_bandcamp.gif" alt="">Bandcamp</li></a>
+                    <a href="https://t.me/nusylveon" target="_blank"><li><img src="img/gifs/logo_telegram.gif" alt="">Telegram</li></a>
+                    <a href="https://instagram.com/newsylveon" target="_blank"><li><img src="img/gifs/logo_insta.gif" alt="">Instagram</li></a>
+                    <a href="https://vk.com/newsylveon" target="_blank"><li><img src="img/gifs/logo_vk.gif" alt="">VKontakte</li></a>
+                    <a href="https://soundcloud.com/newsylveon" target="_blank"><li><img src="img/gifs/logo_sc.gif" alt="">Soundcloud</li></a>
+                    <a href="https://newsylveon.bandcamp.com" target="_blank"><li><img src="img/gifs/logo_bandcamp.gif" alt="">Bandcamp</li></a>
                 </ul>
             </li>
             <li><span>Help</span>
                 <ul class="drop-menu border-simple">
                     <li class="unclickable">MANIFEST</li>
-                    <a href="#" target="_blank"><li><img src="/img/gifs/icon_notepad.gif" alt="">READ_ME.txt</li></a>
+                    <a href="#" target="_blank"><li><img src="img/gifs/icon_notepad.gif" alt="">READ_ME.txt</li></a>
                     <li class="unclickable">Associates</li>
-                    <a href="https://t.me/iskralabel" target="_blank"><li><img src="/img/gifs/world.gif" alt="">Лейбл Искра*</li></a>
-                    <a href="https://linktr.ee/cylllectba" target="_blank"><li><img src="/img/gifs/world.gif" alt="">существа</li></a>
+                    <a href="https://t.me/iskralabel" target="_blank"><li><img src="img/gifs/world.gif" alt="">Лейбл Искра*</li></a>
+                    <a href="https://linktr.ee/cylllectba" target="_blank"><li><img src="img/gifs/world.gif" alt="">существа</li></a>
                     <li class="unclickable">Web Development</li>
-                    <a href="https://madoxy.github.io/" target="_blank"><li><img src="/img/gifs/world.gif" alt="">madoxy</li></a>
+                    <a href="https://madoxy.github.io/" target="_blank"><li><img src="img/gifs/world.gif" alt="">madoxy</li></a>
                 </ul>
             </li>
         </ul>
@@ -52,7 +52,7 @@
             <div class="window-title"><h2>new sylveon</h2></div>
             <div class="window-content border">
                 <div class="album-cover">
-                    <img src="/img/cover.jpg" alt="">
+                    <img src="img/cover.jpg" alt="">
                     <div class="lyrics">
                     </div>
                 </div>
@@ -61,11 +61,11 @@
                         <div class="time-details border-inv-s">
                             <div class="time-wrapper">
                                 <div class="current-time">00:00</div>
-                                <div class="player-playpause"><img class="playpause-icon" src="/img/player/player-pause-red.png" alt=""></div>
+                                <div class="player-playpause"><img class="playpause-icon" src="img/player/player-pause-red.png" alt=""></div>
                             </div>
                             <div class="volume-wrapper">
                                 <div class="volume-meter">Volume: 100%</div>
-                                <div class="audio-visual"><img src="/img/player/playerplaying.gif" alt=""></div>
+                                <div class="audio-visual"><img src="img/player/playerplaying.gif" alt=""></div>
                             </div>
                         </div>
                         <div class="track-wrapper">
@@ -87,11 +87,11 @@
                                         <span class="border-small">44</span>kHz
                                     </div>
                                     <div class="stereo">
-                                        <img src="/img/player/stereo.png" alt="">
+                                        <img src="img/player/stereo.png" alt="">
                                     </div>
                                 </div>
                                 <div class="slider_container">
-                                    <img src="/img/player/player-volume.png" alt="" class="volume_icon">
+                                    <img src="img/player/player-volume.png" alt="" class="volume_icon">
                                     <input type="range" min="1" max="100" value="99" class="volume_slider" onchange="setVolume()">
                                   </div>
                             </div>
@@ -103,11 +103,11 @@
                         </div>
                         <div class="media-buttons">
                             <div class="buttons">
-                                <div class="prev-track border-click" onclick="prevTrack()"><img src="/img/player/player-backward.png" alt=""></div>
-                                <div class="playpause-track border-click" onclick="playTrack()"><img src="/img/player/player-play.png" alt=""></div>
-                                <div class="pause-track border-click" onclick="pauseTrack()"><img src="/img/player/player-pause.png" alt=""></div>
-                                <div class="stop-track border-click" onclick="stopTrack()"><img src="/img/player/player-stop.png" alt=""></div>
-                                <div class="next-track border-click" onclick="nextTrack()"><img src="/img/player/player-forward.png" alt=""></div>
+                                <div class="prev-track border-click" onclick="prevTrack()"><img src="img/player/player-backward.png" alt=""></div>
+                                <div class="playpause-track border-click" onclick="playTrack()"><img src="img/player/player-play.png" alt=""></div>
+                                <div class="pause-track border-click" onclick="pauseTrack()"><img src="img/player/player-pause.png" alt=""></div>
+                                <div class="stop-track border-click" onclick="stopTrack()"><img src="img/player/player-stop.png" alt=""></div>
+                                <div class="next-track border-click" onclick="nextTrack()"><img src="img/player/player-forward.png" alt=""></div>
                             </div>
                             <div class="sr-duration">
                                 <div class="shuffle-repeat">
@@ -117,7 +117,7 @@
                                     </div>
                                     <div class="repeat">
                                         <input type="checkbox" id="repeat" name="repeat" value="repeat">
-                                        <label for="repeat"><img src="/img/player/player-repeat.png" alt=""></label><br> 
+                                        <label for="repeat"><img src="img/player/player-repeat.png" alt=""></label><br> 
                                     </div>
                                     <div class="stems">
                                         <a href="#" target="_blank">Stems</a>
@@ -140,25 +140,25 @@
 
                 <div class="content-buttons" id="stream">
                     <a class="article-btn" href="#">
-                        <img src="/img/gifs/Notes-06.gif" alt=""> <span>Яндекс.Музыка</span>
+                        <img src="img/gifs/Notes-06.gif" alt=""> <span>Яндекс.Музыка</span>
+                    </a>
+                    <a class="article-btn" href="https://music.vk.com/link/sFCAM">
+                        <img src="img/gifs/ip.gif" alt=""> <span>VK Музыка</span>
+                    </a>
+                    <a class="article-btn" href="https://open.spotify.com/album/2TiEolpSSNAO9vmxdBbAdw">
+                        <img src="img/gifs/audio-animate.gif" alt=""> <span>Spotify</span>
                     </a>
                     <a class="article-btn" href="#">
-                        <img src="/img/gifs/ip.gif" alt=""> <span>VK Музыка</span>
-                    </a>
-                    <a class="article-btn" href="#">
-                        <img src="/img/gifs/audio-animate.gif" alt=""> <span>Spotify</span>
-                    </a>
-                    <a class="article-btn" href="#">
-                        <img src="/img/gifs/soun1.gif" alt=""> <span>Soundcloud</span>
+                        <img src="img/gifs/soun1.gif" alt=""> <span>Soundcloud</span>
                     </a>
                 </div>
                 
                 <div class="content-buttons" id="manifest">
                     <a class="article-btn" href="#">
-                        <img src="/img/gifs/dollar_green.gif" alt=""> <span>Support Me</span>
+                        <img src="img/gifs/dollar_green.gif" alt=""> <span>Support Me</span>
                     </a>
                     <a class="article-btn" href="#">
-                        <img src="/img/gifs/icon_notepad.gif" alt=""> <span>MANIFEST</span>
+                        <img src="img/gifs/icon_notepad.gif" alt=""> <span>MANIFEST</span>
                     </a>
                 </div>
             </div>
@@ -167,12 +167,12 @@
     
     <footer>
         <div class="footer-buttons">
-            <a href="https://t.me/iskralabel" target="_blank"><img src="/img/iskra.png" alt=""></a>
-            <a href="https://t.me/cyiiiectba" target="_blank"><img src="/img/sychestva.png" alt=""></a>
+            <a href="https://t.me/iskralabel" target="_blank"><img src="img/iskra.png" alt=""></a>
+            <a href="https://t.me/cyiiiectba" target="_blank"><img src="img/sychestva.png" alt=""></a>
         </div>
         <p>page by <a href="https://madoxy.github.io/" target="_blank">madoxy</a></p>
     </footer>
 
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
