--- a/narratiffffchiki/index.html
+++ b/narratiffffchiki/index.html
@@ -148,7 +148,7 @@
                     <a class="article-btn" href="https://open.spotify.com/album/2TiEolpSSNAO9vmxdBbAdw">
                         <img src="img/gifs/audio-animate.gif" alt=""> <span>Spotify</span>
                     </a>
-                    <a class="article-btn" href="#">
+                    <a class="article-btn" href="https://soundcloud.com/newsylveon/sets/narratifffchiki/s-nQTMI2Yiviy?si=ab00233c971547768d3ea4bcea5c943d&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
                         <img src="img/gifs/soun1.gif" alt=""> <span>Soundcloud</span>
                     </a>
                 </div>
