--- a/narratiffffchiki/index.html
+++ b/narratiffffchiki/index.html
@@ -12,8 +12,8 @@
         <ul class="menu-bar">
             <li><span>File</span>
                 <ul class="drop-menu border-simple">
-                    <a href="#" target="_blank"><li><img src="img/gifs/download.gif" alt="">Download Album</li></a>
-                    <a href="#" target="_blank"><li><img src="img/gifs/microphone1-c.gif" alt="">Download Stems</li></a>
+                    <a href="https://drive.google.com/drive/folders/1NMJBI2diA3F_9xbJkT3SE-s0tLq2FCM0?usp=sharing" target="_blank"><li><img src="img/gifs/download.gif" alt="">Download Album</li></a>
+                    <a href="https://drive.google.com/drive/folders/17i7BoZM9Hck5DRkhVp6WGKUmIdhwpXtQ?usp=sharing" target="_blank"><li><img src="img/gifs/microphone1-c.gif" alt="">Download Stems</li></a>
                 </ul>
             </li>
             <li><span>Lyrics</span>
