--- a/narratiffffchiki/index.html
+++ b/narratiffffchiki/index.html
@@ -12,8 +12,8 @@
         <ul class="menu-bar">
             <li><span>File</span>
                 <ul class="drop-menu border-simple">
-                    <a href="#" target="_blank"><li><img src="img/gifs/download.gif" alt="">Download Album</li></a>
-                    <a href="#" target="_blank"><li><img src="img/gifs/microphone1-c.gif" alt="">Download Stems</li></a>
+                    <a href="https://drive.google.com/drive/folders/1j6HlE-sEYfxZhul7h4ssc1kZ18iXqecI?usp=sharing" target="_blank"><li><img src="img/gifs/download.gif" alt="">Download Album</li></a>
+                    <a href="https://drive.google.com/drive/folders/1a3oi9HAIWIVgBbT7ga_DDXV9t6spJsBT?usp=sharing" target="_blank"><li><img src="img/gifs/microphone1-c.gif" alt="">Download Stems</li></a>
                 </ul>
             </li>
             <li><span>Lyrics</span>
@@ -39,7 +39,7 @@
             <li><span>Help</span>
                 <ul class="drop-menu border-simple">
                     <li class="unclickable">MANIFEST</li>
-                    <a href="#" target="_blank"><li><img src="img/gifs/icon_notepad.gif" alt="">READ_ME.txt</li></a>
+                    <a href="README" target="_blank"><li><img src="img/gifs/icon_notepad.gif" alt="">README.txt</li></a>
                     <li class="unclickable">Associates</li>
                     <a href="https://t.me/iskralabel" target="_blank"><li><img src="img/gifs/world.gif" alt="">Лейбл Искра*</li></a>
                     <a href="https://linktr.ee/cylllectba" target="_blank"><li><img src="img/gifs/world.gif" alt="">существа</li></a>
@@ -120,7 +120,7 @@
                                         <label for="repeat"><img src="img/player/player-repeat.png" alt=""></label><br> 
                                     </div>
                                     <div class="stems">
-                                        <a href="#" target="_blank">Stems</a>
+                                        <a href="https://drive.google.com/drive/folders/1a3oi9HAIWIVgBbT7ga_DDXV9t6spJsBT?usp=sharing" target="_blank">Stems</a>
                                     </div>
                                 </div>
                                 <div class="list-duration border-small">
@@ -148,16 +148,16 @@
                     <a class="article-btn" href="https://open.spotify.com/album/2TiEolpSSNAO9vmxdBbAdw">
                         <img src="img/gifs/audio-animate.gif" alt=""> <span>Spotify</span>
                     </a>
-                    <a class="article-btn" href="#">
+                    <a class="article-btn" href="https://soundcloud.com/newsylveon/sets/narratifffchiki/">
                         <img src="img/gifs/soun1.gif" alt=""> <span>Soundcloud</span>
                     </a>
                 </div>
                 
                 <div class="content-buttons" id="manifest">
-                    <a class="article-btn" href="#">
+                    <a class="article-btn" href="https://www.donationalerts.com/r/nusylveon">
                         <img src="img/gifs/dollar_green.gif" alt=""> <span>Support Me</span>
                     </a>
-                    <a class="article-btn" href="#">
+                    <a class="article-btn" href="README.txt">
                         <img src="img/gifs/icon_notepad.gif" alt=""> <span>MANIFEST</span>
                     </a>
                 </div>
