--- a/narratiffffchiki/index.html
+++ b/narratiffffchiki/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>нарратифффчики</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="darkreader-lock">
+    <link rel="icon" type="image/x-icon" href="img/cover.jpg">
 </head>
 <body>
     <main>
