--- a/narratiffffchiki/index.html
+++ b/narratiffffchiki/index.html
@@ -40,7 +40,7 @@
             <li><span>Help</span>
                 <ul class="drop-menu border-simple">
                     <li class="unclickable">MANIFEST</li>
-                    <a href="README" target="_blank"><li><img src="img/gifs/icon_notepad.gif" alt="">README.txt</li></a>
+                    <a href="README.txt" target="_blank"><li><img src="img/gifs/icon_notepad.gif" alt="">README.txt</li></a>
                     <li class="unclickable">Associates</li>
                     <a href="https://t.me/iskralabel" target="_blank"><li><img src="img/gifs/world.gif" alt="">Лейбл Искра*</li></a>
                     <a href="https://linktr.ee/cylllectba" target="_blank"><li><img src="img/gifs/world.gif" alt="">существа</li></a>
@@ -158,7 +158,7 @@
                     <a class="article-btn" href="https://www.donationalerts.com/r/nusylveon">
                         <img src="img/gifs/dollar_green.gif" alt=""> <span>Support Me</span>
                     </a>
-                    <a class="article-btn" href="README.txt">
+                    <a class="article-btn" href="README.txt" target="_blank">
                         <img src="img/gifs/icon_notepad.gif" alt=""> <span>MANIFEST</span>
                     </a>
                 </div>
