--- a/narratiffffchiki/index.html
+++ b/narratiffffchiki/index.html
@@ -15,6 +15,7 @@
                 <ul class="drop-menu border-simple">
                     <a href="https://drive.google.com/drive/folders/1j6HlE-sEYfxZhul7h4ssc1kZ18iXqecI?usp=sharing" target="_blank"><li><img src="img/gifs/download.gif" alt="">Download Album</li></a>
                     <a href="https://drive.google.com/drive/folders/1a3oi9HAIWIVgBbT7ga_DDXV9t6spJsBT?usp=sharing" target="_blank"><li><img src="img/gifs/microphone1-c.gif" alt="">Download Stems</li></a>
+                    <a href="https://drive.google.com/drive/folders/1lwaVa5BUjN7LDbXjtc26FDAscD8YRGGd?usp=sharing" target="_blank"><li><img src="img/gifs/world.gif" alt="">Promo Materials</li></a>
                 </ul>
             </li>
             <li><span>Lyrics</span>
