--- a/narratiffffchiki/index.html
+++ b/narratiffffchiki/index.html
@@ -40,7 +40,7 @@
             </li>
             <li><span>Help</span>
                 <ul class="drop-menu border-simple">
-                    <li class="unclickable">MANIFEST</li>
+                    <li class="unclickable">MANIFESTO</li>
                     <a href="README.txt" target="_blank"><li><img src="img/gifs/icon_notepad.gif" alt="">README.txt</li></a>
                     <li class="unclickable">Associates</li>
                     <a href="https://t.me/iskralabel" target="_blank"><li><img src="img/gifs/world.gif" alt="">Лейбл Искра*</li></a>
@@ -160,7 +160,7 @@
                         <img src="img/gifs/dollar_green.gif" alt=""> <span>Support Me</span>
                     </a>
                     <a class="article-btn" href="README.txt" target="_blank">
-                        <img src="img/gifs/icon_notepad.gif" alt=""> <span>MANIFEST</span>
+                        <img src="img/gifs/icon_notepad.gif" alt=""> <span>MANIFESTO</span>
                     </a>
                 </div>
             </div>
