--- a/narratiffffchiki/index.html
+++ b/narratiffffchiki/index.html
@@ -141,7 +141,7 @@
                 </div>
 
                 <div class="content-buttons" id="stream">
-                    <a class="article-btn" href="#">
+                    <a class="article-btn" href="https://music.yandex.ru/album/36621810">
                         <img src="img/gifs/Notes-06.gif" alt=""> <span>Яндекс.Музыка</span>
                     </a>
                     <a class="article-btn" href="https://music.vk.com/link/sFCAM">
